--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header class="cabecalho">
-   <img class="cabecalho-imagem" src="transformacao.png" alt="">
+     <h1>vai ser uma imagem</h1>
+   <img class="cabecalho-imagem" src="tecnologia (1).png" alt="">
    <ul class="cabecalho-lista-item">
-    <li>Estudantes</li>
-    <li>Escola</li>
+    <li class="cabecalho-lista-item">estudante</li>
+    <li class="cabecalho-lista-item">escola</li>
    </ul>
    </header>
-</body>
-</html>
+
